@@ -75,13 +75,28 @@ sub to_list {
 }
 
 sub to_object {
+  Carp::carp '->to_object is deprecated; use ->to_object_as_local or ->to_object_as_utc';
+  return _to_object(@_);
+}
+
+sub to_object_as_local {
+  my ($self, $class) = @_;
+  return _to_object($self, $class, 1);
+}
+
+sub to_object_as_utc {
+  my ($self, $class) = @_;
+  return _to_object($self, $class, 0);
+}
+
+sub _to_object {
   my ($self, $class, $islocal) = @_;
   Module::Runtime::require_module $class;
   if ($class->isa('Time::Piece')) {
-    my ($epoch, $new) = $self->_mktime($islocal);
+    my ($epoch, $new) = _mktime($self, $islocal);
     return $islocal ? scalar $class->localtime($epoch) : scalar $class->gmtime($epoch);
   } elsif ($class->isa('Time::Moment')) {
-    my ($epoch, $new) = $self->_mktime($islocal);
+    my ($epoch, $new) = _mktime($self, $islocal);
     my $moment = $class->new(
       year   => $new->year + 1900,
       month  => $new->mon + 1,
@@ -92,7 +107,7 @@ sub to_object {
     );
     return $islocal ? $moment->with_offset_same_local(($moment->epoch - $epoch) / 60) : $moment;
   } elsif ($class->isa('DateTime')) {
-    my ($epoch, $new) = $self->_mktime($islocal);
+    my ($epoch, $new) = _mktime($self, $islocal);
     return $class->new(
       year   => $new->year + 1900,
       month  => $new->mon + 1,
@@ -112,13 +127,27 @@ sub to_object {
 
 sub epoch {
   my ($self, $islocal) = @_;
-  my ($epoch, $new) = $self->_mktime($islocal);
+  Carp::carp '->epoch is deprecated; use ->epoch_as_local or ->epoch_as_utc';
+  my ($epoch, $new) = _mktime($self, $islocal);
+  return $epoch;
+}
+
+sub epoch_as_local {
+  my ($self) = @_;
+  my ($epoch) = _mktime($self, 1);
+  return $epoch;
+}
+
+sub epoch_as_utc {
+  my ($self) = @_;
+  my ($epoch) = _mktime($self, 0);
   return $epoch;
 }
 
 sub normalized {
   my ($self, $islocal) = @_;
-  my ($epoch, $new) = $self->_mktime($islocal);
+  Carp::carp '->normalized is deprecated; use ->normalized_as_local or ->normalized_as_utc';
+  my ($epoch, $new) = _mktime($self, $islocal);
   if (!$islocal) {
     require Time::FFI;
     $new = Time::FFI::gmtime($epoch);
@@ -127,6 +156,21 @@ sub normalized {
   return $new;
 }
 *with_extra = \&normalized;
+
+sub normalized_as_local {
+  my ($self) = @_;
+  my ($epoch, $new) = _mktime($self, 1);
+  return $new;
+}
+
+sub normalized_as_utc {
+  my ($self) = @_;
+  my ($epoch) = _mktime($self, 0);
+  require Time::FFI;
+  my $new = Time::FFI::gmtime($epoch);
+  bless $new, ref $self;
+  return $new;
+}
 
 sub _mktime {
   my ($self, $islocal) = @_;
@@ -165,16 +209,16 @@ Time::FFI::tm - POSIX tm record structure
   );
   $tm->mday($tm->mday + 1); # add a day
 
-  my $in_local = $tm->normalized(1);
+  my $in_local = $tm->normalized_as_local;
   say $in_local->isdst; # now knows if DST is active
 
   my $tm = Time::FFI::tm->from_list(CORE::localtime(time));
 
   my $epoch = POSIX::mktime($tm->to_list);
-  my $epoch = $tm->epoch(1);
+  my $epoch = $tm->epoch_as_local;
 
   my $tm = Time::FFI::tm->from_object(Time::Moment->now);
-  my $datetime = $tm->to_object('DateTime', 1);
+  my $datetime = $tm->to_object_as_local('DateTime');
 
 =head1 DESCRIPTION
 
@@ -280,49 +324,56 @@ resulting structure.
 Return the list of values in the structure, in the same order returned by
 L<perlfunc/localtime>.
 
-=head2 to_object
+=head2 to_object_as_local
 
-  my $piece    = $tm->to_object('Time::Piece', $islocal);
-  my $moment   = $tm->to_object('Time::Moment', $islocal);
-  my $datetime = $tm->to_object('DateTime', $islocal);
+=head2 to_object_as_utc
 
-Return an object of the specified class. If a true value is passed as the
-second argument, the object will represent the time as interpreted in the local
-time zone; otherwise it will be interpreted as UTC. Currently L<Time::Piece>,
-L<Time::Moment>, and L<DateTime> (or subclasses) are recognized.
+  my $piece    = $tm->to_object_as_local('Time::Piece');
+  my $moment   = $tm->to_object_as_utc('Time::Moment');
+
+I<Since version 2.002.>
+
+Return an object of the specified class. Currently L<Time::Piece>,
+L<Time::Moment>, and L<DateTime> (or subclasses) are recognized. Depending on
+the method called, the time attributes are interpreted in the local time zone
+or in UTC.
 
 When interpreted as a local time, values outside the standard ranges are
 accepted; this is not currently supported for UTC times.
 
 You may also specify L<Time::tm> or L<Time::FFI::tm> (or subclasses), in which
-case the C<$islocal> parameter is ignored and the values are copied as-is.
+case C<to_object_as_local> and C<to_object_as_utc> produce the same result with
+the time attributes copied as-is.
 
-=head2 epoch
+=head2 epoch_as_local
 
-  my $epoch = $tm->epoch($islocal);
+=head2 epoch_as_utc
 
-I<Since version 1.000.>
+  my $epoch = $tm->epoch_as_local;
+  my $epoch = $tm->epoch_as_utc
+
+I<Since version 2.002.>
 
 Translate the time structure into a Unix epoch timestamp (seconds since
-1970-01-01 UTC). If a true value is passed, the timestamp will represent the
-time as interpreted in the local time zone; otherwise it will be interpreted as
-UTC.
+1970-01-01 UTC). Depending on the method called, the time attributes are
+interpreted in the local time zone or in UTC.
 
 When interpreted as a local time, values outside the standard ranges are
 accepted; this is not currently supported for UTC times.
 
-=head2 normalized
+=head2 normalized_as_local
 
-  my $new = $tm->normalized($islocal);
+=head2 normalized_as_utc
 
-I<Since version 1.003.>
+  my $new = $tm->normalized_as_local;
+  my $new = $tm->normalized_as_utc;
+
+I<Since version 2.002.>
 
 Return a new B<Time::FFI::tm> object representing the same time, but with
 C<wday>, C<yday>, C<isdst>, and (if supported) C<gmtoff> and C<zone> set
-appropriately. If a true value is passed, these values will be set according to
-the time as interpreted in the local time zone; otherwise they will be set
-according to the time as interpreted in UTC. Note that this does not replace
-the need to pass C<$islocal> for future conversions.
+appropriately. Depending on the method called, the time attributes are
+interpreted in the local time zone or in UTC.
 
 When interpreted as a local time, values outside the standard ranges will also
 be normalized; this is not currently supported for UTC times.
@@ -347,4 +398,4 @@ This is free software, licensed under:
 
 L<Time::FFI>, L<Time::tm>
 
-=for Pod::Coverage with_extra tm_sec tm_min tm_hour tm_mday tm_mon tm_year tm_wday tm_yday tm_isdst tm_gmtoff tm_zone
+=for Pod::Coverage with_extra to_object epoch normalized tm_sec tm_min tm_hour tm_mday tm_mon tm_year tm_wday tm_yday tm_isdst tm_gmtoff tm_zone
