@@ -9,7 +9,7 @@ my @localtime = CORE::localtime $time;
 my @gmtime = CORE::gmtime $time;
 
 my $local_tm = Time::FFI::tm->from_list(@localtime);
-my $local_dt = $local_tm->to_object('DateTime', 1);
+my $local_dt = $local_tm->to_object_as_local('DateTime');
 isa_ok $local_dt, 'DateTime';
 is $local_dt, object {
   call second => $local_tm->sec;
@@ -31,10 +31,10 @@ is $local_from, object {
   call mon   => $local_tm->mon;
   call year  => $local_tm->year;
 }, 'local tm structure from DateTime object';
-is $local_from->epoch(1), $time, 'right epoch timestamp from local time';
+is $local_from->epoch_as_local, $time, 'right epoch timestamp from local time';
 
 my $utc_tm = Time::FFI::tm->from_list(@gmtime);
-my $utc_dt = $utc_tm->to_object('DateTime', 0);
+my $utc_dt = $utc_tm->to_object_as_utc('DateTime');
 isa_ok $utc_dt, 'DateTime';
 is $utc_dt, object {
   call second => $utc_tm->sec;
@@ -56,7 +56,7 @@ is $utc_from, object {
   call mon   => $utc_tm->mon;
   call year  => $utc_tm->year;
 }, 'UTC tm structure from DateTime object';
-is $utc_from->epoch(0), $time, 'right epoch timestamp from UTC time';
+is $utc_from->epoch_as_utc, $time, 'right epoch timestamp from UTC time';
 
 my $dst_tm = Time::FFI::tm->new(
   year => 119,
@@ -66,7 +66,7 @@ my $dst_tm = Time::FFI::tm->new(
   min  => 0,
   sec  => 0,
 );
-my $dst_dt = $dst_tm->to_object('DateTime', 1);
+my $dst_dt = $dst_tm->to_object_as_local('DateTime');
 my $real_dt = DateTime->new(
   year   => 2019,
   month  => 6,
