@@ -1,4 +1,7 @@
 {{$NEXT}}
+  - Added to_object_as_local, to_object_as_utc, epoch_as_local, epoch_as_utc,
+    normalized_as_local, and normalized_as_utc methods to Time::FFI::tm.
+  - Deprecated to_object, epoch, and normalized methods for Time::FFI::tm.
 
 2.001     2019-11-27 13:09:36 EST
   - Convert to use FFI::Platypus type parser version 1, no functional changes.
